--- a/index.html
+++ b/index.html
@@ -32,3 +32,23 @@
         </div>
       </div>
     </header>
+    <section class="bg-white p-6 rounded shadow">
+      <div class="flex justify-between items-center mb-6">
+        <h2 class="text-2xl font-semibold">Available Jobs</h2>
+        <p id="tabCount" class="text-gray-600">0 Jobs</p>
+      </div>
+      <div class="flex gap-4 mb-6">
+        <button class="tab-btn px-4 py-2 bg-blue-500 text-white rounded" data-tab="All">All</button>
+        <button class="tab-btn px-4 py-2 bg-gray-200 rounded" data-tab="Interview">Interview</button>
+        <button class="tab-btn px-4 py-2 bg-gray-200 rounded" data-tab="Rejected">Rejected</button>
+      </div>
+      
+      <div id="jobContainer" class="grid grid-cols-1 md:grid-cols-2 gap-6"></div>
+
+    </section>
+  </div>
+
+  <script src="script.js" defer></script>
+
+</body>
+</html>
